[gd_scene load_steps=24 format=3 uid="uid://bapmlx4fc4wti"]

[ext_resource type="Script" path="res://Scripts/crop_plot.gd" id="1_1w3j8"]
[ext_resource type="Texture2D" uid="uid://cajv4ulwer5vd" path="res://Assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/Elements/Crops/soil_00.png" id="1_isd16"]
[ext_resource type="Texture2D" uid="uid://d2o8d6fiak4qp" path="res://Assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/Elements/Crops/soil_03.png" id="2_qk88r"]
[ext_resource type="Texture2D" uid="uid://dc1dq6dbau6x0" path="res://Assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/Elements/Crops/soil_01.png" id="3_7utv5"]
[ext_resource type="Texture2D" uid="uid://cu6y7lmfhalup" path="res://Assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/Elements/Caleb's Crops/beetroot.png" id="4_ltxnd"]
[ext_resource type="Script" path="res://Scripts/States/state_machine.gd" id="6_cc1wd"]
[ext_resource type="Script" path="res://Scripts/States/Crop States/tilled.gd" id="7_0c4dx"]
[ext_resource type="Script" path="res://Scripts/States/Crop States/empty_plot.gd" id="7_g375w"]
[ext_resource type="Script" path="res://Scripts/States/Crop States/watered.gd" id="8_weq3h"]
[ext_resource type="Script" path="res://Scripts/States/Crop States/planted.gd" id="9_t171a"]
[ext_resource type="Script" path="res://Scripts/States/Crop States/growing.gd" id="10_hs6nb"]
[ext_resource type="Script" path="res://Scripts/States/Crop States/harvested.gd" id="11_ougai"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yf2v"]
atlas = ExtResource("2_qk88r")
region = Rect2(0, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eqeb"]
atlas = ExtResource("1_isd16")
region = Rect2(0, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8tyg"]
atlas = ExtResource("3_7utv5")
region = Rect2(0, 0, 16, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_p24wy"]
animations = [{
"frames": [],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yf2v")
}],
"loop": true,
"name": &"harvested",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eqeb")
}],
"loop": true,
"name": &"tilled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8tyg")
}],
"loop": true,
"name": &"watered",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sc7cv"]
atlas = ExtResource("4_ltxnd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll2d6"]
atlas = ExtResource("4_ltxnd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7st4"]
atlas = ExtResource("4_ltxnd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bknbk"]
atlas = ExtResource("4_ltxnd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdiab"]
atlas = ExtResource("4_ltxnd")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2e1q8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc7cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7st4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bknbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdiab")
}],
"loop": true,
"name": &"beet",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"empty",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qc05p"]
radius = 6.0

[node name="CropPlot" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_1w3j8")

[node name="Plot" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p24wy")
animation = &"empty"
autoplay = "empty"

[node name="Crop" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_2e1q8")
animation = &"empty"
autoplay = "empty"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("6_cc1wd")
starting_state = NodePath("EmptyPlot")

[node name="EmptyPlot" type="Node" parent="StateMachine" node_paths=PackedStringArray("tilled_state")]
script = ExtResource("7_g375w")
tilled_state = NodePath("../Tilled")

[node name="Tilled" type="Node" parent="StateMachine" node_paths=PackedStringArray("watered_state", "planted_state", "empty_state")]
script = ExtResource("7_0c4dx")
watered_state = NodePath("../Watered")
planted_state = NodePath("../Planted")
empty_state = NodePath("../EmptyPlot")

[node name="Watered" type="Node" parent="StateMachine" node_paths=PackedStringArray("growing_state")]
script = ExtResource("8_weq3h")
growing_state = NodePath("../Growing")

[node name="Planted" type="Node" parent="StateMachine" node_paths=PackedStringArray("growing_state")]
script = ExtResource("9_t171a")
growing_state = NodePath("../Growing")

[node name="Growing" type="Node" parent="StateMachine"]
script = ExtResource("10_hs6nb")

[node name="Harvested" type="Node" parent="StateMachine"]
script = ExtResource("11_ougai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qc05p")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
